switch to apache ignite to avoid dependence on mongo for now